# swagger.yaml
@@ -24,7 +24,7 @@ paths:
   /samples:
     post:
       tags:
-        - sample
+        - samples_post
       description: Add a new sample. Duplicates are not allowed
       requestBody:
         description: Sample to be added
@@ -54,6 +54,8 @@ paths:
                 $ref: '#/components/schemas/Error'
   /samples/{id}:
     get:
+      tags:
+        - samples_get
       description: Return a sample based on a sample ID.
       parameters:
         - name: id
