# swagger_server/controllers/samples_get_controller.py
@@ -1,0 +1,19 @@
+import connexion
+import six
+
+from swagger_server.models.error import Error  # noqa: E501
+from swagger_server.models.sample import Sample  # noqa: E501
+from swagger_server import util
+
+
+def samples_id_get(id):  # noqa: E501
+    """samples_id_get
+
+    Return a sample based on a sample ID. # noqa: E501
+
+    :param id: 
+    :type id: str
+
+    :rtype: Sample
+    """
+    return 'do some magic!'
